# nix

./: .gitignore  configuration.nix  flake.nix  home.nix  hyprland.nix  xmonad.nix
.zed/: tasks.json
fonts/monolisa-jc/: monolisa-jc.nix
fonts/monolisa-jc-nerdfont/: monolisa-jc-nerdfont.nix
home/: default.nix  style.nix
home/programs/: fish.nix  helix.nix  kitty.nix  rofi.nix  theme.rasi  tmux.nix
home/programs/xmonad/config/: Colors.hs  Main.hs  Nix.hs  Volume.hs  cabal.project  flake.nix  my-xmonad.cabal
home/programs/xmonad/config/XMonad/Layout/: Constrained.hs
home/services/: dunst.nix  udiskie.nix
home/style/: colors.nix  danqing.nix  default.nix  espresso.nix  everforestDarkHard.nix  fonts.nix  plain.nix
hosts/laptop/: default.nix  hardware-configuration.nix
hosts/nixie/: default.nix  hardware-configuration.nix  home-extra.nix  nvidia.nix
modules/default-packages/: default.nix
modules/gnome/: default.nix
modules/grub/: default.nix
modules/locale/: default.nix
modules/mounts/: default.nix
modules/nix/: default.nix
modules/scanning/: default.nix
modules/style/: colors.nix  fonts.nix
modules/systemd-boot/: default.nix
modules/xmonad/: default.nix
programs/agda/: default.nix
programs/brave/: default.nix
programs/firefox/: default.nix
programs/git/: default.nix
programs/gitu/: default.nix
programs/helix/: default.nix
programs/kitty/: default.nix
programs/obs/: default.nix
programs/xmonad/config/: Main.hs  Nix.hs  flake.nix  my-xmonad.cabal
programs/zsh/: default.nix
users/: default.nix  home.nix  jcinnamond.nix
(+27 files in other folders)
