cabal-version: 3.8
name: my-xmonad
version: 0.1.0.0
license:
author: John Cinnamond
maintainer: john@cinnamond.me.uk
build-type: Simple
extra-doc-files: CHANGELOG.md

common common
  ghc-options: -Wall
  default-extensions:
    FlexibleContexts
    ImportQualifiedPost
    MultiParamTypeClasses
    OverloadedRecordDot
    TypeSynonymInstances

  default-language: GHC2024
  build-depends:
    base,
    containers,
    xmonad ^>=0.18.0,
    xmonad-contrib ^>=0.18.1,
    xmonad-jc-extra,

executable my-xmonad
  import: common
  hs-source-dirs: .
  main-is: Main.hs
  build-depends:
  other-modules:
    Nix
    Volume
