cabal-version:   3.8
name:            my-xmonad
version:         0.1.0.0
license:
author:          John Cinnamond
maintainer:      john@cinnamond.me.uk
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable my-xmonad
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base            ^>=4.19.0
    , containers      ^>=0.6.8
    , xmonad          ^>=0.18.0
    , xmonad-contrib  ^>=0.18.1

  other-modules:    Colors
  hs-source-dirs:   .
  default-language: Haskell2010
